# note-app

./: .gitignore
.github/workflows/: build.yml
server/: .coveragerc  .pylintrc  database.db  pyproject.toml  pytest.ini
server/src/: db.py  main.py  models.py
server/tests/: test_main.py
ui/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json
ui/src/: App.test.tsx  App.tsx
