[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Joanna Wang <joannaahj@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.12"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
