[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Joanna Wang <joannaahj@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.19"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"
black = "^24.3.0"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
